Fix sidebar being pushed off screen.
Changed top margin to padding so that the sidebar was not also pushed down the screen.

--- a/portfolio/src/main/webapp/styles/server-dev.css
+++ b/portfolio/src/main/webapp/styles/server-dev.css
@@ -1,3 +1,3 @@
 main {
-  margin-top: 12vmax;
+  padding-top: 11vmax;
 }
